# QML-AntDesign

./: .clang-format  .gitignore  .gitmodules  AntRectangle.cpp  AntRectangle.hpp  BorderConfig.cpp  BorderConfig.hpp  CMakeLists.txt  LICENSE  Main.qml  QmlUtil.hpp  README.md  main.cpp
Ant/: Ant.qrc  CMakeLists.txt  Plugin.py
Ant/Badge/: AntBadge.qml  AntBadgePlugin.cpp  AntBadgePlugin.hpp  AntBadgePlugin.qrc  CMakeLists.txt  Feature.md  qmldir
Ant/Badge/Style/: AntBadgeStyle.qml  qmldir
Ant/Badge/TestApplication/: main.cpp  main.qml
Ant/Button/: AntButton.qml  AntButtonPlugin.cpp  AntButtonPlugin.hpp  AntButtonPlugin.qrc  CMakeLists.txt  qmldir
Ant/Button/Style/: AntButtonStyle.qml  AntButtonStyleToken.qml  ButtonSizeStyle.qml  ButtonStyle.qml  Dashed.qml  DashedStyle.qml  Default.qml  DefaultStyle.qml  LinkStyle.qml  Primary.qml  PrimaryStyle.qml  TextStyle.qml  qmldir
Ant/Button/TestApplication/: main.cpp  main.qml
Ant/Button/Utils/: Utils.js  qmldir
Ant/Checkbox/: AntCheckbox.qml  AntCheckboxPlugin.cpp  AntCheckboxPlugin.hpp  AntCheckboxPlugin.qrc  CMakeLists.txt  qmldir
Ant/Checkbox/TestApplication/: main.qml  qml.qrc
Ant/ColorPicker/: AntAlphaSlider.qml  AntColorBackground.qml  AntColorPicker.qml  AntColorPickerPlugin.cpp  AntColorPickerPlugin.hpp  AntColorPickerPlugin.qrc  AntPaletteSlider.qml  CMakeLists.txt  VericalLayout.qml  qmldir
Ant/ColorPicker/Style/: AntColorPickStyle.qml  qmldir
Ant/ColorPicker/TestApplication/: main.qml
Ant/ColorPicker/Utils/: Utils.js
Ant/Core/: Ant.hpp  AntCorePlugin.cpp  AntCorePlugin.hpp  AntCorePlugin.qrc  CMakeLists.txt  qmldir
Ant/Core/Awesome/: AntAwesome.hpp  AntAwesomeUtils.cpp  AntAwesomeUtils.hpp
Ant/Core/Background/: AntTransparentBg.qml  qmldir
Ant/Core/Colors/: AntColors.qml  qmldir
Ant/Core/Enums/: AntAwesome.hpp  AntEnums.hpp
Ant/Core/Font/: AntFont.qml  qmldir
Ant/Core/LazyItemProxy/: LazyItemProxy.hpp  Proxy.js
Ant/Core/Model/: AntListModel.cpp  AntListModel.hpp
Ant/Core/Rectangle/: AntRectangle.cpp  AntRectangle.hpp  BorderConfig.cpp  BorderConfig.hpp
Ant/Core/Shadow/: ShadowBase.qml  ShadowL1Down.qml  qmldir
Ant/Core/TestApplication/: Shader.qml  main.cpp  main.qml  qml.qrc
Ant/Core/Theme/: AntTheme.qml  qmldir
Ant/Core/Utils/: Utils.js
Ant/Divider/: AntDivider.qml  AntDividerPlugin.cpp  AntDividerPlugin.hpp  AntDividerPlugin.qrc  CMakeLists.txt  qmldir
Ant/Divider/Style/: AntDividerStyle.qml  qmldir
Ant/Divider/TestApplication/: main.qml
Ant/Dropdown/: AntDropdown.qml  AntDropdownPlugin.cpp  AntDropdownPlugin.hpp  AntDropdownPlugin.qrc  CMakeLists.txt  qmldir
Ant/Dropdown/TestApplication/: main.qml
Ant/Icon/: AntIcon.qml  AntIconPlugin.cpp  AntIconPlugin.hpp  AntIconPlugin.qrc  AntSvgIcon.cpp  AntSvgIcon.hpp  AntSvgReader.cpp  AntSvgReader.hpp  CMakeLists.txt  qmldir
Ant/Icon/TestApplication/: main.qml
Ant/Input/: AntInput.qml  AntInputPlugin.cpp  AntInputPlugin.hpp  AntInputPlugin.qrc  AntTextField.qml  CMakeLists.txt  qmldir
Ant/Input/Component/: IconComponent.qml  TextComponent.qml  qmldir
Ant/Input/Style/: AntInputStyle.qml  qmldir
Ant/Input/TestApplication/: main.cpp  main.qml
Ant/Input/Utils/: Utils.js
Ant/InputNumber/: AntInputNumber.qml  AntInputNumberPlugin.cpp  AntInputNumberPlugin.hpp  AntInputNumberPlugin.qrc  CMakeLists.txt  qmldir
Ant/InputNumber/Style/: AntInputNumberStyle.qml
Ant/InputNumber/TestApplication/: main.qml
Ant/InputNumber/Utils/: Utils.js
Ant/Mask/: AntMask.qml  AntMaskPlugin.cpp  AntMaskPlugin.hpp  AntMaskPlugin.qrc  CMakeLists.txt  qmldir
Ant/Mask/TestApplication/: main.qml
Ant/Menu/: AntMenu.qml  AntMenuPlugin.cpp  AntMenuPlugin.hpp  AntMenuPlugin.qrc  CMakeLists.txt  ItemBackground.qml  ItemLoader.qml  MenuItemGroupType.qml  MenuItemType.qml  SubMenuType.qml  qmldir
Ant/Menu/Style/: AntMenuStyle.qml
Ant/Menu/TestApplication/: main.cpp  main.qml
Ant/PluginTemplate/: AntTemplatePlugin.cpp  AntTemplatePlugin.hpp  AntTemplatePlugin.qrc  CMakeLists.txt  qmldir
Ant/PluginTemplate/Style/: qmldir
Ant/PluginTemplate/TestApplication/: main.cpp  main.qml
Ant/Popover/: AntPopover.qml  AntPopoverPlugin.cpp  AntPopoverPlugin.hpp  AntPopoverPlugin.qrc  CMakeLists.txt  qmldir
Ant/Popover/TestApplication/: main.qml
Ant/QRCode/: AntQRCode.qml  AntQRCodeGen.cpp  AntQRCodeGen.hpp  AntQRCodePlugin.cpp  AntQRCodePlugin.hpp  AntQRCodePlugin.qrc  CMakeLists.txt  qmldir
Ant/QRCode/TestApplication/: main.qml
Ant/QtCompat/: CMakeLists.txt  qmldir
Ant/QtCompat/GraphicalEffects/: AntQtCompatGraphicalEffectsPlugin.cpp  AntQtCompatGraphicalEffectsPlugin.hpp  AntQtCompatGraphicalEffectsPlugin.qrc  CMakeLists.txt  CompatDropShadow.qml  CompatLinearGradient.qml  CompatOpacityMask.qml  qmldir
Ant/Ribbon/: AntRibbon.qml  AntRibbonPlugin.cpp  AntRibbonPlugin.hpp  AntRibbonPlugin.qrc  CMakeLists.txt  qmldir
Ant/Ribbon/TestApplication/: main.qml
Ant/Select/: AntSelect.qml  AntSelectPlugin.cpp  AntSelectPlugin.hpp  AntSelectPlugin.qrc  CMakeLists.txt  qmldir
Ant/Select/Style/: AntSelectStyle.qml  qmldir
Ant/Select/TestApplication/: main.qml
Ant/Shader/: Icon.frag
Ant/Slider/: AntSlider.qml  AntSliderHandle.qml  AntSliderPlugin.cpp  AntSliderPlugin.hpp  AntSliderPlugin.qrc  AntSliderRail.qml  CMakeLists.txt  qmldir
Ant/Slider/TestApplication/: main.qml
Ant/Spin/: AntSpin.qml  AntSpinPlugin.cpp  AntSpinPlugin.hpp  AntSpinPlugin.qrc  CMakeLists.txt  qmldir
Ant/Spin/TestApplication/: main.qml
Ant/Tag/: AntTag.qml  AntTagPlugin.cpp  AntTagPlugin.hpp  AntTagPlugin.qrc  CMakeLists.txt  qmldir
Ant/Tag/Style/: AntTagStyle.qml  PresetsColors.qml  qmldir
Ant/Text/: AntText.qml  AntTextPlugin.cpp  AntTextPlugin.hpp  AntTextPlugin.qrc  CMakeLists.txt  qmldir
Ant/Tooltip/: AntTooltip.qml  AntTooltip.qml.autosave  AntTooltipPlugin.cpp  AntTooltipPlugin.hpp  AntTooltipPlugin.qrc  CMakeLists.txt  Feature.md  qmldir
cmake-tools/: CMakeLists.txt  use_ant_cmake_tools.cmake
cmake-tools/ant-test-application/: CMakeLists.txt
cmake-tools/modules/: Findant-qt.cmake  ant-plugin.cmake  write_plugin_qmldir.cmake
(+21 files in other folders)
